[90526750] Submit button on iOS does not have correct styling

--- a/app/assets/stylesheets/_buttons.css.sass
+++ b/app/assets/stylesheets/_buttons.css.sass
@@ -24,6 +24,7 @@
 
 input[type="submit"]
   margin-right: $buffer_small
+  -webkit-appearance: none
 
 input[type="submit"],
 .btn_blue
